--- a/package.json
+++ b/package.json
@@ -10,23 +10,46 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "5.x",
+    "@react-navigation/stack": "5.x",
+    "@unform/core": "^2.1.6",
+    "@unform/mobile": "^2.1.6",
     "react": "18.1.0",
-    "react-native": "0.70.2"
+    "react-native": "0.70.1",
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.70.4",
+    "@types/react-native": "^0.70.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "^0.72.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
