--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appgobarber",
+  "name": "gobarberapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -17,11 +17,11 @@
     "@unform/mobile": "^2.1.6",
     "react": "18.1.0",
     "react-native": "0.70.1",
-    "react-native-gesture-handler": "^2.6.2",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.17.0",
+    "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
@@ -52,6 +52,9 @@
     "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "jest": {
     "preset": "react-native",
